--- a/Validation Login and Sign-In/Login/css/Style.css
+++ b/Validation Login and Sign-In/Login/css/Style.css
@@ -32,7 +32,7 @@ body {
   color: #fff;
   user-select: none;
   border-radius: 15px 15px 0 0;
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(-135deg, #151212, #0b0d17);
 }
 .wrapper form {
   padding: 10px 30px 50px 30px;
