--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -12,7 +12,7 @@ h1 {
 }
 #men,
 #women,
-#childrens {
+#Mix {
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(5, 1fr);
@@ -43,7 +43,7 @@ h1 {
 
 #men,
 #women,
-#childrens {
+#Mix {
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(5, 1fr);
@@ -74,7 +74,7 @@ h1 {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
-#childrens img {
+#Mix img {
   width: 100%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -111,7 +111,7 @@ h2 {
 @media (max-width: 1070px) {
   #men,
   #women,
-  #childrens {
+  #Mix {
     width: 95%;
     grid-gap: 10px;
   }
@@ -119,7 +119,7 @@ h2 {
 @media (max-width: 850px) {
   #men,
   #women,
-  #childrens {
+  #Mix {
     display: grid;
     grid-gap: 70px 20px;
     grid-template-columns: repeat(3, 1fr);
@@ -129,7 +129,7 @@ h2 {
 @media (max-width: 650px) {
   #men,
   #women,
-  #childrens {
+  #Mix {
     width: 90%;
   }
 }
@@ -139,7 +139,7 @@ h2 {
   }
   #men,
   #women,
-  #childrens {
+  #Mix {
     width: 70%;
   }
 }
@@ -149,7 +149,7 @@ h2 {
   }
   #men,
   #women,
-  #childrens {
+  #Mix {
     width: 90%;
     grid-template-columns: repeat(2, 1fr);
   }
