--- a/css/footer.css
+++ b/css/footer.css
@@ -1,34 +1,57 @@
-body
-{
-    margin: 0;
-    font-family: 'Lato', sans-serif;
+footer {
+    width: 100%;
+    margin-bottom: -20px;
+    padding-bottom: 0px;
+    background: rgb(17, 17, 17);
 }
 
-#containerFooter
-{
-    width: 100%;
-    background-color: rgb(29, 29, 29);
-    color: white;
-    letter-spacing: 1px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    text-transform: uppercase;
-    font-size: 15px;
-    padding: 25px 25px;
-    box-sizing: border-box;
+footer .content {
+    margin: auto;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-#containerFooter h3:hover, #containerFooter p:hover
-{
-    color: lightslategray;
-    cursor: pointer;
+
+footer .content p,
+a {
+    color: #fff;
 }
-#webFooter
-{
-    padding-top: 30px;
-    font-size: 12px;
+
+footer .content .box {
+    width: 33%;
 }
-#webFooter input[type="text"] {
-    height: 70px;
+
+footer .content .topic {
+    font-size: 22px;
+    font-weight: 600;
+    color: #fff;
+    margin-bottom: 16px;
+
+}
+
+footer .content p {
+    text-align: justify;
+}
+
+footer .content .lower .topic {
+    margin: 24px 0 5px 0;
+}
+
+footer .content .lower i {
+    padding-right: 16px;
+}
+
+footer .content .middle {
+    padding-left: 80px;
+}
+
+footer .content .middle a {
+    line-height: 32px;
+}
+
+footer .content .right input[type="text"] {
+    height: 45px;
     width: 100%;
     outline: none;
     color: #d9d9d9;
@@ -39,10 +62,9 @@ body
     border: 2px solid #222222;
 }
 
-#webFooter input[type="submit"] {
-    height: 30px;
-    width: 80%;
-    margin: 40px;
+footer .content .right input[type="submit"] {
+    height: 42px;
+    width: 100%;
     font-size: 18px;
     color: #d9d9d9;
     background: #eb2f06;
@@ -52,24 +74,59 @@ body
     border: 2px solid #eb2f06;
 }
 
-#webFooter input[type="submit"]:hover {
+.content .right input[type="submit"]:hover {
     background: none;
     color: #eb2f06;
 }
 
-.bottom {
-    width: 120%;
+footer .content .media-icons a {
+    font-size: 16px;
+    height: 45px;
+    width: 45px;
+    display: inline-block;
+    text-align: center;
+    line-height: 43px;
+    border-radius: 5px;
+    border: 2px solid #222222;
+    margin: 30px 5px 0 0;
+}
+
+.content .media-icons a:hover {
+    border-color: #eb2f06;
+}
+
+footer .bottom {
+    width: 100%;
     text-align: center;
     color: #d9d9d9;
-    padding: 0 30px 10px 0;
-    margin-left: 150%;
+    padding: 0 40px 5px 0;
 
 }
 
-.bottom a {
+footer .bottom a {
     color: #eb2f06;
 }
-#webFooter .icon:hover{
-    background: none;
+
+footer a:hover {
     color: #eb2f06;
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #eb2f06;
+    color: white;
+    cursor: pointer;
+    padding: 12px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#myBtn:hover {
+    background-color: #222222;
 }
